add preview features for failsafe maven plugin